fixed alignment if more than 6 avatars available

--- a/source/avatar/avatar.style.scss
+++ b/source/avatar/avatar.style.scss
@@ -12,7 +12,7 @@ li {
 	display: inline;
 	margin: 0 4px 0 0;
 
-	&:nth-child(5) {
+	&:nth-child(4n+1) {
 		margin: 0 0 0 0;
 	}
 
